--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
   <header class="site-header">
     <div class="container header-inner">
       <div class="logo">DEEP BREW HOUSE</div>
-      <nav class="main-nav">
+      <button class="menu-toggle" id="menuToggle">
+  <i class="fa-solid fa-ellipsis-vertical"></i>
+</button>
+      <nav class="main-nav" id="mainNav">
         <a href="#feature-section">About</a>
         <a href="#locations">Locations</a>
         <a href="#contact">Contact</a>
@@ -114,10 +117,10 @@
 
   </main>
 
-  <script>
+  <!-- <script>
     // small script to set current year
     document.getElementById('year').textContent = new Date().getFullYear();
-  </script>
+  </script> -->
 
   <!-- ======================
      LOCATIONS SECTION
@@ -235,6 +238,17 @@
         <p>Powered by <span>CMDigital</span></p>
     </div>
 </footer>
+
+
+<script>
+ const menuToggle = document.getElementById("menuToggle");
+const mainNav = document.getElementById("mainNav");
+
+menuToggle.addEventListener("click", () => {
+  mainNav.classList.toggle("open");
+});
+
+</script>
 
 </body>
 </html>
